twitter.css
/*
 * Colors
 *
 * Blue: #55acee
 * Graphite: #66757f
 * Graphite light: #99aab5
 * Graphite lighter: #ccd6dd
 * Web topbar light: #c4e2f9
 *
 * iOS topbar: #54acef
 * iOS topbar dark: #3886c1
 * iOS topbar light: #88c9f9
 *
 * Retweet (green): #77B255
 * Favorite (orange): #ffac33
 * iOS Favorite (yellow): #ffcc4d
 */


/*
 * Globals
 */

/* Prevent user backgrounds */
body {
  background-image: none !important;
  background-color: #fafafa !important;
}


/*
 * Buttons
 */

.btn:not(.plain-btn) {
  color: #fff !important;
  background-color: #55acee !important;
  background-image: none !important;
  border-color: #55acee !important;
}
.btn:focus {
  box-shadow: none !important;
}      
.btn .Icon {
  color: inherit !important;
}


/*
 * Undo overzealous focus state
 */

.selected-stream-item:focus {
  box-shadow: none !important;
}


/*
 * Inverted topbar
 */

/* Tweak the borders */
.topbar,
.global-nav {
  border-bottom: 0 !important;
}
.global-nav-inner {
  background-color: #55acee !important;
}

/* Container should go full width */
.global-nav .container {
  max-width: none !important;
  padding-left: 10px !important;
  padding-right: 5px !important;
}

/* Bird */
.bird-topbar-etched {
  position: absolute !important;
  top: 0 !important;
  left: 50% !important;
  margin-left: -12px !important;
  color: #fff !important;
}

/* Nav */
#global-actions > li > a {
  color: #fff !important;
  border: 0 !important;
  height: 46px !important;
  transition: none !important;
}
#global-actions > li:hover > a {
  color: #c4e2f9 !important;
}
#global-actions > li.active > a,
#global-actions > li.active:hover > a {
  color: #fff !important;
}

/* Neutralize the unread nav indicator */
#global-actions .new:before {
  color: #fff !important;
}

/* Tweak the DM and settings nav links to match */
.global-nav .pull-right .right-actions {
  margin-right: -5px !important;
}
.nav.right-actions > li > a, 
.nav.right-actions > li > button {
  color: #fff !important;
  opacity: 1 !important;
}
.nav.right-actions > li > a:hover, 
.nav.right-actions > li > button:hover, 
.nav.right-actions > li > a:focus,
.nav.right-actions > li > button:focus {
  color: #c4e2f9 !important;
}
#global-new-tweet-button {
  color: #fff !important;
  background-color: transparent !important;
  background-image: none !important;
  opacity: 1 !important;
}
#global-new-tweet-button:hover {
  color: #c4e2f9 !important;
}

/* Search field */
.global-nav .form-search .search-input {
  font-size: 13px !important;
  line-height: 18px !important; /* Vertically center the text */
  color: #81c1f2 !important;
  background-color: #3886c1 !important;
  opacity: 1 !important;
}
.global-nav .form-search .search-input:placeholder {
  color: #81c1f2 !important;
}

/* Make body match topbar */
.wrapper,
.wrapper-narrow {
  padding-top: 60px !important;
}


/*
 * Sidebar modules
 *
 * Scoped to .dashboard to avoid interference with modal modules.
 */

.dashboard .module {
  background-color: #fff !important;
  border: 1px solid rgba(0,0,0,.1) !important;
}
.dashboard .module .flex-module {
  border: 0 !important;
}

/* Profile */
.mini-profile {
  position: relative;
  padding-top: 190px;
}
.mini-profile .profile-summary {
  position: absolute !important;
  top: -1px !important;
  left: -1px !important;
  right: -1px !important;
  background-color: transparent !important;
}

.home-tweet-box, 
.rosetta .dm-tweetbox, 
.rosetta .WebNotification-buffer--altColor, 
.content-main .conversations-enabled .expansion-container .inline-reply-tweetbox {
  background-color: #f9f9f9 !important;
}
.home-tweet-box {
  border-top: 1px solid #eee !important;
}
.tweet-box[contenteditable="true"] {
  border-color: #ddd !important;
}

/* Outright hide WTF */
.dashboard .wtf-module {
  display: none !important;
}

/* Nav links */
.module .list-link,
.search-more-options .btn-link {
  border: 0 !important;
}
.module .js-nav-links > li + li .list-link {
  border-top: 1px solid #eee !important;
}

/* Stats (for dashboard and mini profiles) */
.stats {
  margin-left: 1px !important;
  margin-right: 1px !important;
  border: 0 !important;
  background-color: transparent !important;
}
.stats a {
  color: #99aab5 !important;
}
.stats a strong {
  color: #66757f !important;
  font-size: 14px !important;
  font-weight: 500 !important;
  line-height: 1 !important;
}

/* Make dashboard stats equal width */
.dashboard .stats {
  display: table !important;
  table-layout: fixed !important;
  width: 100% !important;
  padding: 0 !important;
}
.dashboard .stats li {
  display: table-cell !important;
  width: 1% !important;
  float: none !important;
  margin: 0 !important;
}
.dashboard .stats li a {
  display: block !important;
  float: none !important;
  padding: 8px 10px !important;
}
.dashboard .stats li + li {
  border-left: 1px solid #eee !important;
}


/*
 * Main content area
 */

.content-header,
.content-no-header,
.stream-item, 
.stream-item.open, 
.unfocusable-stream-item {
  border-color: rgba(0,0,0,.1) !important;
}

/* Tweets */
.tweet {
  border-bottom-color: #eee !important;
}
.tweet .stream-item-footer {
  min-height: 24px !important;
}
.content-main .expansion-container .tweet.ancestor, 
.content-main .expansion-container .tweet.descendant, 
.content-main .expansion-container .view-more-container, 
.content-main .expansion-container .inline-reply-tweetbox,
.original-tweet:hover,
.conversation-module .conversation-tweet-item .tweet:hover {
  background-color: #f9f9f9 !important;
}
.open .tweet:hover,
.original-tweet-container .original-tweet {
  background-color: #fff !important;
}

/* Tweet actions */
.tweet-actions {
  position: static !important;
  float: left !important;
  padding-left: 0 !important;
  margin-left: -10px !important;
  background-color: transparent !important;
  box-shadow: none !important;
}
.tweet-actions a,
.tweet-actions .btn-link {
  margin-left: 0 !important;
  padding: 3px 10px !important;
  color: #ccd6dd !important;
}
.tweet:hover .tweet-actions a,
.tweet:hover .tweet-actions .btn-link {
  color: #99aab5 !important; 
}

/* Hide the text */
.tweet-actions b {
  display: none !important;
}
/* Twerk the icons */
.tweet .tweet-actions .Icon {
  font-size: 14px !important;
}

/* Hide the details to make room for the tweet actions */
.tweet .details {
  display: none !important;
}

/* Reapply tweet stats borders */
.tweet .stats {
  border-top: 1px solid #eee !important;
  border-bottom: 1px solid #eee !important;
}

/* Hide the inline replies caret */
.inline-reply-caret {
  display: none !important;
}

/* Line */
.vellip, 
.vellip:before, 
.vellip:after, 
.conversation-module > li:after, 
.conversation-module > li:before {
  background-color: #99aab5 !important;
}

/* Don't use inverted icons for Activity feed */
.stream-item-activity-me .activity-type {
  top: 9px !important;
}
.activity-type .Icon {
  font-size: 14px !important;
  width: 16px !important;
  text-align: center !important;
}
.activity-type .Icon--retweeted:before,
.context .with-icn .Icon--retweeted:before {
  content: "\f152" !important;
}
.activity-type .Icon--favorited:before,
.context .with-icn .Icon--favorited:before {
  content: "\f147" !important;
  color: #ffcc4d;
}
.activity-type .Icon--follower:before,
.context .with-icn .Icon--follower:before {
  content: "\f056" !important;
}

/* Permalinks */
.inline-reply-tweetbox,
.modal-content .activity-content .stream-item {
  background-color: #f9f9f9 !important;
}


/* 
 * Modals
 */

.modal-header,
.gallery-container .modal-header {
  background-image: none !important;
  border-bottom: 0 !important;
}

